<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="5dp"
    android:orientation="vertical"
    android:padding="10dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/textViewSunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sunrise"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageViewSunrise"
            app:layout_constraintEnd_toEndOf="@id/imageViewSunrise"
            app:layout_constraintStart_toStartOf="@id/imageViewSunrise"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewSunrise"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="36dp"
            android:contentDescription="@string/sunrise_image"
            android:src="@drawable/sunrise"
            app:layout_constraintBottom_toTopOf="@+id/textViewSunriseTime"
            app:layout_constraintEnd_toStartOf="@id/imageViewSunset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSunrise" />

        <TextView
            android:id="@+id/textViewSunriseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sunrise_time"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageViewSunrise"
            app:layout_constraintStart_toStartOf="@id/imageViewSunrise"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSunrise" />

        <TextView
            android:id="@+id/textViewSunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sunset"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageViewSunset"
            app:layout_constraintEnd_toEndOf="@id/imageViewSunset"
            app:layout_constraintStart_toStartOf="@id/imageViewSunset"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewSunset"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="36dp"
            android:contentDescription="@string/sunset_image"
            android:src="@drawable/sunset"
            app:layout_constraintBottom_toTopOf="@+id/textViewSunsetTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewSunrise"
            app:layout_constraintTop_toBottomOf="@+id/textViewSunset" />

        <TextView
            android:id="@+id/textViewSunsetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sunset_time"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageViewSunset"
            app:layout_constraintStart_toStartOf="@id/imageViewSunset"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSunset" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>